# at-coder-localplayground

./: .gitignore  Cargo.toml  README.md  run.sh  sampleInput.txt
output/: result
src/: main.rs  solve.rs
src/solver/: solve1.rs  solve2.rs  solve3.rs
tests/: a.rs  b.rs  c.rs
tests/inputs/: a.txt  b.txt  c.txt
tests/solutions/: a.rs  b.rs  c.rs
tests/utils/: mod.rs
