[package]
name = "at-coder-playground"
version = "0.1.0"
authors = ["rchaser53 <tayoshizawa29@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = "0.3.6"
petgraph = "0.5.1"
maplit = "1.0.2"
superslice = "1.0.0"
num-complex = "0.4.0"
nalgebra = "0.26.2"
permutohedron = "0.2.4"
itertools = "0.10.0"
assert_cli = "0.6.3"